--- a/details.html
+++ b/details.html
@@ -9,11 +9,10 @@
 </head>
 <body>
     <div class="container">
-        <div class="menu-container"></div>
-        <h1>Products</h1>
-        <div class="product-container">Loading products...</div>
+        <a href="/">Home</a>
+        <div class="detail-container">Loading product...</div>
     </div>
     
-    <script src="js/index.js" type="module"></script>
+    <script src="js/detail.js" type="module"></script>
 </body>
 </html>
