--- a/login.html
+++ b/login.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+                <a href="details.html">Details</a>
+                <a href="login.html">Login</a>
+            </li>
+        </ul>
+    </nav>
     <div class="container">
         <div class="menu-container"></div>
 
