--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
     </div>
-    
+    <script src="js/settings/api.js" type="module"></script>
     <script src="js/index.js" type="module"></script>
 </body>
 </html>
