--- a/details.html
+++ b/details.html
@@ -18,8 +18,7 @@
         </ul>
     </nav>
     <div class="container">
-        <a href="/">Home</a>
-        <div class="detail-container">Loading product...</div>
+        <div class="detail-container"></div>
     </div>
     
     <script src="js/detail.js" type="module"></script>
