--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="menu-container"></div>
         <h1>Products</h1>
-        <div class="product-container">Loading products...</div>
+        <div class="product-container"></div>
     </div>
     <script src="js/settings/api.js" type="module"></script>
     <script src="js/index.js" type="module"></script>
